# kinectv2_decoders

./: CMakeLists.txt  README.md  evaluate_decoders.py  plot_generation_script.py  run_decoders.cpp
include/: device_parameters.h  libfreenect2_data_structures.h  processors.h  read_file_handler.h  setup_parser.h
parameters/: calib_pose_fixed_ir_2.h5  default_setup.xml  test_setup.xml
src/: device_parameters.cpp  kde_processor.cpp  libfreenect2_data_structures.h  libfreenect2_processor.cpp  plot_generation_script.py  processors.h  read_file_handler.cpp  setup_parser.cpp
